Finalizado Cap Captura Requisitos y añadida página de agradecimientos

--- a/Documentacion/book.tex
+++ b/Documentacion/book.tex
@@ -51,12 +51,19 @@
 \usepackage[refpages]{gloss}
 % -------------------------------------------------------------------------
 
-\title{Desarrollo Aplicación Web de Gestión Deportiva para Entrenadores de Natación}
+\title{\bf Desarrollo Aplicación Web de Gestión Deportiva para Entrenadores de Natación}
 \author{Roberto Marco Sánchez}
 \date{\today}
 
 \begin{document}
 	\maketitle
+	
+	% Página de agradecimientos
+	\newpage 
+	\thispagestyle{empty} 
+	\include{agradecimientos}
+	
+	% Glosario		
 	\makegloss
 	
 	% FRONTMATTER: TOC, LOF, LOT y descripcion/organizacion de la memoria.
