--- a/Documentacion/glosario.bib
+++ b/Documentacion/glosario.bib
@@ -19,7 +19,7 @@
 
 @GLOSSDEF{nadador, 
     word       = {nadador}, 
-    definition = {Persona que practica la natación..}, 
+    definition = {Persona que practica la natación.}, 
     sort-word  = {nadador} 
 }
 
@@ -83,7 +83,7 @@
 	sort-word  = {carga}
 }
 
-@GLOSSDEF{p,
+@GLOSSDEF{intensidad,
 	word	   = {intensidad},
 	definition = {Referente a los ejercicios. Grado en el que se realizan los ejercicios de natación.},
 	sort-word  = {intensidad}
