Modificado glosario de términos

--- a/Documentacion/glosario.bib
+++ b/Documentacion/glosario.bib
@@ -1,12 +1,12 @@
 @GLOSSDEF{entrenador, 
     word       = {entrenador}, 
-    definition = {Persona cuyo oficio o afición consiste en preparar y adiestrar a personas o animales, generalmente para la práctica de un deporte.}, 
+    definition = {Persona cuyo oficio o afición consiste en preparar a personas, generalmente para la práctica de un deporte.}, 
     sort-word  = {entrenador} 
 }
 
 @GLOSSDEF{entrenamiento, 
     word       = {entrenamiento}, 
-    definition = {Preparación física y técnica que se realiza para perfeccionar el ejercicio de una actividad deportiva o lúdica.}, 
+    definition = {Preparación física, técnica, táctica y psicológica para perfeccionar el ejercicio de una actividad deportiva o lúdica.}, 
     sort-word  = {entrenamiento} 
 }
 
@@ -25,7 +25,7 @@
 
 @GLOSSDEF{competicion, 
     word       = {competición}, 
-    definition = {Prueba en la que se lucha por conseguir un triunfo deportivo. Específicamente, competición de natación.}, 
+    definition = {Prueba en la que se lucha por conseguir un triunfo deportivo o superación personal. Específicamente, competición de natación.}, 
     sort-word  = {competición} 
 }
 
@@ -43,19 +43,19 @@
 
 @GLOSSDEF{microciclo, 
     word       = {microciclo}, 
-    definition = {Conjunto de sesiones que tienen un objetivo concreto. Como su nombre indica, son ciclos breves de entrenamiento. Comúnmente, los microciclos hacen referencia a cada sesión de entrenamiento que realice un entrenador.}, 
+    definition = {Conjunto de sesiones que tienen un objetivo concreto. Como su nombre indica, son ciclos breves de entrenamiento. Comúnmente, los microciclos hacen referencia a cada sesión de entrenamiento que realice un entrenador. Su duración es de 3 a 15 sesiones donde se combinan días de trabajo y días de recuperación.}, 
     sort-word  = {microciclo} 
 }
 
 @GLOSSDEF{mesociclo, 
     word       = {mesociclo}, 
-    definition = {Bloques de microciclos ordenados para conseguir un objetivo determinado: representan etapas relativamente acabas del proceso de entrenamiento que permiten asegurar el desarrollo de una capacidad.}, 
+    definition = {Conjunto de microciclos ordenados para conseguir un objetivo determinado: representan etapas relativamente acabadas del proceso de entrenamiento que permiten asegurar el desarrollo de una o varias capacidades. Tienen una duración de 2 a 7 microciclos y combina microciclos de trabajo y de recuperación.}, 
     sort-word  = {mesociclo} 
 }
 
 @GLOSSDEF{macrociclo,
 	word	   = {macrociclo},
-	definition = {Bloque de mesociclos. La idea equivale al concepto de periodo de entrenamiento, los que normalmente suelen ir separados por reposos.},
+	definition = {Periodo de entrenamiento constituído por varios subperiodos, fases y mesociclos con el objetivo de conseguir uno o varios picos de máximo rendimiento seguido de una época de recuperación.},
 	sort-word  = {macrociclo}
 }
 
@@ -79,25 +79,25 @@
 
 @GLOSSDEF{carga,
 	word	   = {carga},
-	definition = {Factor de acumulación en un deportista. Queda definido por el volumen y la intensidad, o también por el volumen multiplicado por el índice de Mujika.},
+	definition = {La combinación o mezcla de los aspectos cuantitativos y cualitativos del entrenamiento, con un contenido y sistematización temporal determinada.},
 	sort-word  = {carga}
 }
 
 @GLOSSDEF{intensidad,
 	word	   = {intensidad},
-	definition = {Referente a los ejercicios. Grado en el que se realizan los ejercicios de natación.},
+	definition = {Referente a los ejercicios. Grado de exigencia de la carga o aspecto cualitativo de la carga.},
 	sort-word  = {intensidad}
 }
 
 @GLOSSDEF{aerobico,
 	word	   = {aeróbico},
-	definition = {Referentes a los tipos de ejercicios. Incluyen cualquier tipo de ejercicio que se practique a niveles moderados de intensidad durante periodos de tiempo largos.},
+	definition = {Referentes a los tipos de ejercicios. Incluyen cualquier tipo de ejercicio que se practique a niveles bajos, moderados y altos de intensidad durante periodos de tiempo largos.},
 	sort-word  = {aeróbico}
 }
 
 @GLOSSDEF{anaerobico,
 	word	   = {anaeróbico},
-	definition = {Referentes a los tipos de ejercicios. Comprenden actividades breves basadas en la fuerza.},
+	definition = {Referentes a los tipos de ejercicios. Comprenden actividades breves basadas en la fuerza, velocidad o potencia.},
 	sort-word  = {anaeróbico}
 }
 
